src/ui/readarr_ui/library/snapshots/managarr__ui__readarr_ui__library__book_details_ui__book_details_ui_tests__tests__snapshot_tests__book_details_renders_SearchEditionsError_0.snap
---
source: src/ui/readarr_ui/library/book_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
             ╭  Test Book Details  ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮               
             │ Editions │ History │ File │ Manual Search                                                                                             │               
             │───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│               
             │   Format             ISBN13              ASIN               Publisher                 Page Count     Release Date        Monitored    │               
             │=> Hardcover          9780756404079       B0043RSJ9S         DAW Books                 288            2023-05-20          🏷            │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                  ╭───────────  Error  ────────────╮                                                   │               
             │                                                  │ No items found matching search │                                                   │               
             │                                                  ╰────────────────────────────────╯                                                   │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             │                                                                                                                                       │               
             ╰───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
